fixed map placeholder marker icon map overlap

--- a/src/blocks/google-maps/style.scss
+++ b/src/blocks/google-maps/style.scss
@@ -23,7 +23,7 @@
     position: relative;
     background-color: #e2e2e2;
 
-    &::after {
+    &::before {
         content: "";
         position: absolute;
         display: block;
